change Diona to Slime. Add Skill to Captain, RD, Borges

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -259,6 +259,7 @@
     - id: Binary
     - id: Universal
   # SS220-Add-Languages end
+  - type: DefibrillatorSkill #SS220 LimitationRevive
 
 - type: entity
   abstract: true
