--- a/Resources/Prototypes/SS220/Entities/Structures/Wallmount/switch.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Wallmount/switch.yml
@@ -17,3 +17,21 @@
     - state: off
       shader: unshaded
       map: [ "indicator" ]
+
+- type: entity
+  parent: SignalSwitchDirectional
+  id: KnifeSwinch
+  name: knife signal switch
+  placement:
+    mode: SnapgridCenter
+    snap:
+    - Wallmount
+  components:
+  - type: SignalSwitch
+    state: true
+  - type: Sprite
+    sprite: SS220/Structures/Wallmounts/knife_switch.rsi
+    layers:
+    - state: base
+    - state: off
+      map: [ "indicator" ]
