fix sprite & add new sound for knife_switch

--- a/Resources/Prototypes/SS220/Entities/Structures/Wallmount/switch.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Wallmount/switch.yml
@@ -29,6 +29,8 @@
   components:
   - type: SignalSwitch
     state: true
+    clickSound:
+      path: /Audio/SS220/Machines/Switch/knife_switch.ogg
   - type: Sprite
     sprite: SS220/Structures/Wallmounts/knife_switch.rsi
     layers:
