--- a/Resources/Prototypes/SS220/Entities/Structures/Machines/electrical_chair.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Machines/electrical_chair.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: ElectricalChair
-  parent: BaseStructureDynamic
+  parent: BaseStructure
   name: electrical chair
   description: bzzzt.
   components:
@@ -9,8 +9,7 @@
     state: base
     noRot: true
   - type: Rotatable
-  - type: Transform
-    anchored: true
+  - type: Anchorable
   - type: InteractionOutline
   - type: Strap
     position: Stand
