--- a/Resources/Prototypes/SS220/meme_alert_levels.yml
+++ b/Resources/Prototypes/SS220/meme_alert_levels.yml
@@ -1,32 +1,39 @@
-- type: memelertLevels
-  id: CluwneCommAlerts
-  defaultLevel: green
-  levels:
-    green:
-      announcement: alert-level-green-announcement
-      sound:
-        path: /Audio/Misc/gamma.ogg
-        params:
-          volume: -2
-      color: Green
-    rzhamma:
-      announcement: joke-alert-level-rzhamma-announcement
-      sound:
-        path: /Audio/Misc/gamma.ogg
-        params:
-          volume: -2
-      color: PaleVioletRed
-    hechelta:
-      announcement: joke-alert-level-hechelta-announcement
-      sound:
-        path: /Audio/Misc/delta.ogg
-        params:
-          volume: -6 # Corvax: Reduce sound volume
-      color: DarkRed
-    pepsilon:
-      announcement: joke-alert-level-pepsilon-announcement
-      sound:
-        path: /Audio/Misc/epsilon.ogg
-        params:
-          volume: -2
-      color: DarkViolet
+- type: memelertLevel
+  id: green
+  levelDetails:
+    announcement: alert-level-green-announcement
+    sound:
+      path: /Audio/Misc/gamma.ogg
+      params:
+        volume: -2
+    color: Green
+
+- type: memelertLevel
+  id: rzhamma
+  levelDetails:
+    announcement: joke-alert-level-rzhamma-announcement
+    sound:
+      path: /Audio/Misc/gamma.ogg
+      params:
+        volume: -2
+    color: PaleVioletRed
+
+- type: memelertLevel
+  id: hechelta
+  levelDetails:
+    announcement: joke-alert-level-hechelta-announcement
+    sound:
+      path: /Audio/Misc/delta.ogg
+      params:
+        volume: -6 # Corvax: Reduce sound volume
+    color: DarkRed
+
+- type: memelertLevel
+  id: pepsilon
+  levelDetails:
+    announcement: joke-alert-level-pepsilon-announcement
+    sound:
+      path: /Audio/Misc/epsilon.ogg
+      params:
+        volume: -2
+    color: DarkViolet
