--- a/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
@@ -111,6 +111,11 @@
     availableLanguages:
     - id: Galactic
     - id: Siiktajr
+  - type: LimitationRevive
+    maxRevive: 3 #has no death limit
+    typeDamageOnDead:
+      types:
+        Сerebral: 400
 
 - type: entity
   id: MobTajaranDummy
