--- a/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
@@ -112,7 +112,7 @@
     - id: Galactic
     - id: Siiktajr
   - type: LimitationRevive
-    maxRevive: 3 #has no death limit
+    maxRevive: 3
     typeDamageOnDead:
       types:
         Сerebral: 400
