--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/iron/jobs_IronSquad.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/iron/jobs_IronSquad.yml
@@ -95,7 +95,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -206,7 +206,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -322,7 +322,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -441,7 +441,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -550,7 +550,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
