--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ussp/jobs_sssp.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ussp/jobs_sssp.yml
@@ -71,7 +71,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -167,7 +167,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -263,7 +263,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -358,7 +358,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
@@ -447,7 +447,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       maxRevive: 3
-      timeToDamage: 180
+      delayBeforeDamage: 180
       typeDamageOnDead:
         types:
           Сerebral: 400
