--- a/Resources/Prototypes/Entities/Objects/Power/portable_recharger.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/portable_recharger.yml
@@ -31,7 +31,7 @@
   - type: ItemSlots
     slots:
       charger_slot:
-        ejectOnInteract: false # SS220 Alternative interaction for inject
+        ejectOnInteract: false # SS220 Alternative interaction for eject
         whitelist:
           components:
           - HitscanBatteryAmmoProvider
