--- a/Resources/Prototypes/SS220/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/NPCs/animals.yml
@@ -370,6 +370,8 @@
       path: /Audio/Animals/snake_hiss.ogg
     interactFailureSound:
       path: /Audio/Animals/bear.ogg
+    interactFailureSound:
+      path: /Audio/SS220/Animals/crocodile_fun.ogg
   - type: Tag
     tags:
     - CannotSuicide
