--- a/Resources/Audio/SS220/Animals/attributions.yml
+++ b/Resources/Audio/SS220/Animals/attributions.yml
@@ -1,4 +1,4 @@
 - files: ["crocodile_fun"]
-  license: "https://pixabay.com/service/license-summary/"
+  license: "CC-0"
   copyright: "Fair use"
   source: "https://pixabay.com/"
