--- a/Resources/Prototypes/SS220/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/SS220/Entities/Markers/Spawners/mobs.yml
@@ -26,6 +26,20 @@
       - MobStevenCrocodileGhostRole
 
 - type: entity
+  name: the spawner Albino
+  id: SpawnMobAlbinoCrocodile
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+      - state: green
+      - state: croc
+        sprite: SS220/Mobs/Pets/albino_crocodile.rsi
+  - type: ConditionalSpawner
+    prototypes:
+      - MobAlbinoCrocodile
+
+- type: entity
   name: the spawner Crocodile
   id: SpawnMobCrocodile
   parent: MarkerBase
