--- a/Resources/Audio/SS220/Animals/attributions.yml
+++ b/Resources/Audio/SS220/Animals/attributions.yml
@@ -1,4 +1,4 @@
-- files: ["crocodile_fun"]
-  license: "CC0-1.0"
-  copyright: "Fair use"
-  source: "https://pixabay.com/"
+- files: ["crocodile_fun.ogg"]
+  license: "Custom"
+  copyright: "by SondangSirait419 via https://pixabay.com/, converted to OGG by Burenov (github)"
+  source: "https://pixabay.com/sound-effects/buaya-220038/"
