--- a/Resources/Prototypes/SS220/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/SS220/Entities/Markers/Spawners/mobs.yml
@@ -54,9 +54,10 @@
       - MobCrocodile
 
 - type: entity
-  name: the spawner Crocodile Angry
+  name: the spawner Crocodile
   id: SpawnMobCrocodileAngry
   parent: MarkerBase
+  suffix: Hostile
   components:
   - type: Sprite
     layers:
