--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_special.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_special.yml
@@ -162,7 +162,7 @@
       drink:
         reagents:
         - ReagentId: Ice
-          Quantity: 200
+          Quantity: 100 #220 FixNew-Item
   - type: Sprite
     sprite: Objects/Consumable/Drinks/icebucket.rsi
     state: icon
