--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -421,6 +421,10 @@
   id: Stimpack
   description: Contains enough hyperzine for you to have the chemical's effect for 30 seconds. Use it when you're sure you're ready to throw down.
   components:
+  #220 FixNew-Item
+  - type: Item
+    size: Small
+  #220 FixNew-Item
   - type: Sprite
     sprite: Objects/Specific/Medical/medipen.rsi
     layers:
