--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -17,7 +17,7 @@
 
 - type: entity
   parent: DrinkGlassBase
-  id: DrinkBerryСompote
+  id: DrinkBerryCompote
   name: ягодный компот
   description: Аромат ягод напоминает вам сказку о Красной Шапочке.
   components:
@@ -26,7 +26,7 @@
       drink:
         maxVol: 30
         reagents:
-        - ReagentId: BerryСompote
+        - ReagentId: BerryCompote
           Quantity: 30
   - type: Drink
   - type: Sprite
