--- a/Resources/Prototypes/SS220/Reagents/Consumable/Drink/drinks.yml
+++ b/Resources/Prototypes/SS220/Reagents/Consumable/Drink/drinks.yml
@@ -11,7 +11,7 @@
     state: icon
 
 - type: reagent
-  id: BerryСompote
+  id: BerryCompote
   name: reagent-name-berry-compote
   parent: BaseDrink
   desc: reagent-desc-berry-compote
