Revert "Update drinks.yml"
This reverts commit 65770ec9b3b4bab24aed84315c9d298b6e4fbd26.

--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -17,7 +17,7 @@
 
 - type: entity
   parent: DrinkGlassBase
-  id: DrinkBerryCompote
+  id: DrinkBerryСompote
   name: ягодный компот
   description: Аромат ягод напоминает вам сказку о Красной Шапочке.
   components:
@@ -26,7 +26,7 @@
       drink:
         maxVol: 30
         reagents:
-        - ReagentId: BerryCompote
+        - ReagentId: BerryСompote
           Quantity: 30
   - type: Drink
   - type: Sprite
