--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/Food/kulich.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/Food/kulich.yml
@@ -19,7 +19,12 @@
         - ReagentId: Vitamin
           Quantity: 10
   - type: Item
-    sprite: SS220/Objects/Consumable/Food/cheburek.rsi
+    sprite: SS220/Objects/Consumable/Food/kulich.rsi
+    inhandVisuals:
+      left:
+      - state: inhand-left
+      right:
+      - state: inhand-right
   - type: Tag
     tags:
     - Cake
@@ -28,8 +33,8 @@
   name: кулич
   parent: FoodKulichBase
   id: FoodKulich
-  description: Атеист? А почему рот в куличе?
+  description: Атеист? Почему рот в куличе?
   components:
   - type: Food
   - type: Sprite
-    state: kulich
+    state: icon
